# distopia

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  404.html  CMakeLists.txt  LICENSE.txt  MANIFEST.in  Manifest.in  README.md  Timing_Figures.ipynb  XMMdist.cpp  XMMdist.h  bench.cpp  building_distopia.html  calc_bonds.cpp  calc_bonds.h  design_document.md  distopia.cpp  distopia.h  generate_coords.py  genindex.html  index.html  library.cpp  main.cpp  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_calc_bonds.cpp  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  test.cpp  testing.cpp  timings.cpp  (+2 more)
.github/workflows/: build_and_test.yml  cmake.yml  deploy.yaml  docs.yml  greetings.yml  make_and_test.yml
_sources/: building_distopia.rst.txt
_sources/api/: distopia.rst.txt  libdistopia.rst.txt
api/: distopia.html  helper_functions.html  index.html  libdistopia.html  vector_triple.html
building_and_testing/: index.html
cmake/: CodeCoverage.cmake  FindARM.cmake  FindAVX.cmake  FindSSE.cmake  README.md
devtools/conda_envs/: distopia.yaml  distopia_macos-latest.yaml  distopia_ubuntu-latest.yaml  distopia_windows-latest.yaml
distopia/: CMakeLists.txt  __init__.py  _distopia.pyx  _version.py  pydistopia.pyx
distopia/tests/: test_distopia.py
doc/: Doxyfile  building_distopia.rst  conf.py  index.rst
doc/api/: distopia.rst
doc/html/: annotated.html  arch__config_8h.html  arch__config_8h_source.html  atan_8cpp.html  atan_8h.html  atan_8h_source.html  basemath_8h.html  basemath_8h_source.html  box_8h.html  box_8h_source.html  calc__angles_8cpp.html  calc__bonds_8cpp.html  class_no_box-members.html  class_no_box.html  class_orthogonal_box-members.html  class_orthogonal_box.html  class_triclinic_box-members.html  class_triclinic_box.html  class_vector_triple-members.html  class_vector_triple.html  classes.html  compiler__hints_8h.html  compiler__hints_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a6de617209e7dfe1dba6aa99bb75c990.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_f8c8e6ba86dc96896ed0679c8a35b6f9.html  distopia_8h.html  distopia_8h_source.html  distopia__type__traits_8h.html  distopia__type__traits_8h_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  (+16 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+12 more)
doc/latex/: annotated.tex  arch__config_8h.tex  atan_8cpp.tex  atan_8h.tex  basemath_8h.tex  box_8h.tex  calc__angles_8cpp.tex  calc__bonds_8cpp.tex  class_no_box.tex  class_orthogonal_box.tex  class_triclinic_box.tex  class_vector_triple.tex  compiler__hints_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_a6de617209e7dfe1dba6aa99bb75c990.tex  dir_c85d3e3c5052e9ad9ce18c6863244a25.tex  dir_f8c8e6ba86dc96896ed0679c8a35b6f9.tex  distopia_8h.tex  distopia__type__traits_8h.tex  files.tex  kernels_8h.tex  ops_8h.tex  refman.tex  simd__config_8h.tex  struct_vector_to_scalar_t_struct.tex  struct_vector_to_scalar_t_struct_3_01double_01_4.tex  struct_vector_to_scalar_t_struct_3_01float_01_4.tex  vector__triple_8h.tex  vector__triple__basemath_8h.tex
docs/: Doxyfile  building_distopia.rst  conf.py  index.rst  mkdocs.yml  requirements.txt
docs/_static/: custom.css
docs/_templates/: footer.html
docs/api/: distopia.rst  helper_functions.rst  vector_triple.rst
docs/doc/: Doxyfile
docs/docs/: api.md  building_and_testing.md  examples.md  index.md
examples/: index.html
include/: distopia.h
libdistopia/: CMakeLists.txt  bench.cpp  library.cpp  library.h  run_calc_bonds.cpp  test_angles.cpp  testing.cpp
libdistopia/cmake/: FindARM.cmake  FindAVX.cmake
libdistopia/compare/: anglekernels.h  dihedralkernels.h  distancekernels.h  vanilla.h
libdistopia/include/: distopia.h
libdistopia/libdistopia/include/: distopia.h
libdistopia/libdistopia/lib/: box.h  calc_bonds.cpp  calc_bonds_dispatch.cpp  calc_bonds_dispatch.h  compiler_hints.h  distance_array.cpp  distance_array_dispatch.cpp  distance_array_dispatch.h  distances.h  distopia_type_traits.h  simd_dispatch.h  simd_swizzles.h  vector_triple.h
libdistopia/src/: distopia.cpp
libdistopia/test/: bench.cpp  targets.cpp  test.cpp  test_fixtures.h  test_mda_match.cpp  test_utils.h
libdistopia/test/compare/: calc_distances.h
libdistopia/tests/: benchmark.cpp  test_fixtures.h  test_matches.cpp  test_utils.h  unit_tests.cpp
python/: setup.py
python/distopia/: __init__.py  _distopia.pyx  libdistopia.pyx
search/: search_index.json
src/: .clang-format  distopia.cpp
src/compare/: anglekernels.h  calc_distances.h  distancekernels.h  vanilla.cpp  vanilla.h
src/lib/include/: arch_config.h  arrops.h  atan.h  basemath.h  compiler_hints.h  datastructures.h  distopia.h  distopia_better_distances.h  distopia_type_traits.h  kernels.h  ops.h  ortho_box.h  simd_capability.h  simd_config.h  template_func.tpp  vector_triple.h  vector_triple_basemath.h  x86_basemath.h  x86_gintrin.h  x86_remainder.h  x86_swizzle.h  x86_tgintrin.h  x86_vector_operators.h  x86_vector_triple.h  x86_vector_triple_basemath.h  x86_vectors.h
src/lib/include/simd/: simd_datastructures.h  (+4 more)
src/lib/src/: arrops.cpp  atan.c  atan.cpp  atan.h  calc_angles.cpp  calc_bonds.cpp  distopia.cpp  distopia.tpl  distopia_better_distances.cpp  simd_config.h  singles.h  vector_triple.h  x86_arrops.cpp  x86_calc_angles.cpp  x86_calcbonds.cpp
src/lib/tests/: benchmark.cpp  fixtures.h  test_kernels.cpp  test_mda_match.cpp  test_utils.h  tests.cpp  timings.cpp
test/: test_calc_bonds.cpp
(+7 files in other folders)
