[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  # lowest NumPy we can use for a given Python,
  # In part adapted from: https://github.com/scipy/oldest-supported-numpy/blob/main/setup.cfg
  # As per NEP29, we set the minimum version to 1.23.2 for Python <=3.11
  # and 1.26.0 (first to support) for Python 3.12
  "numpy==1.23.2; python_version<='3.11' and platform_python_implementation != 'PyPy'",
  "numpy==1.26.0; python_version=='3.12' and platform_python_implementation != 'PyPy'",
  # For unreleased versions of Python there is currently no known supported
  # NumPy version. In that case we just let it be a bare NumPy install
  "numpy<2.0; python_version>='3.13'",
  "scikit-build",
  "cmake",
  "cython>=0.28,<3.0",
  "versioneer[toml]==0.26",
  "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "distopia/_version.py"
versionfile_build = "distopia/_version.py"
tag_prefix = ""
parentdir_prefix = "distopia-"
