[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "numpy",
  "scikit-build",
  "cmake",
  "cython",
  "versioningit",
  "ninja; platform_system!='Windows'",
  "versioningit"
]

build-backend = "setuptools.build_meta"

[project]
name = "distopia"
dynamic = ["version"]
description = "Shiny and chrome"
dependencies = [
    "cython",
    "numpy",
]
requires-python = ">=3.9"


[tool.setuptools]
zip-safe = false

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"

