[options]
# cross compilation for dispatch is the default
# comment this out to enable other command line cmake flags to be specified
dispatch = True

[versioneer]
VCS = git
style = pep440
versionfile_source = distopia/_version.py
versionfile_build = distopia/_version.py
tag_prefix = ""
parentdir_prefix = distopia
